// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Terminal 01 color enabled 01 basic terminal functions 01 write 01 writes a single message: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "test message",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 01 write 01 writes a single message: output as chunks 1`] = `
Array [
  "[    log] test message",
]
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 01 write 02 writes multiple messages: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "message 1message 2",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 01 write 02 writes multiple messages: output as chunks 1`] = `
Array [
  "[    log] message 1message 2",
]
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 01 write 03 writes a message with colors: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "[green]message 1[default]",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 01 write 03 writes a message with colors: output as chunks 1`] = `
Array [
  "[    log] [green]message 1[default]",
]
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 01 write 04 writes a multiple messages with colors: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "[green]message 1[default][red]message 2[default]",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 01 write 04 writes a multiple messages with colors: output as chunks 1`] = `
Array [
  "[    log] [green]message 1[default][red]message 2[default]",
]
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 01 write 05 writes a messages with colors interspersed with non-colored messages: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "message 1[green]message 2[default]message 3[red]message 4[default]",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 01 write 05 writes a messages with colors interspersed with non-colored messages: output as chunks 1`] = `
Array [
  "[    log] message 1[green]message 2[default]message 3[red]message 4[default]",
]
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 01 write 06 writes a messages with colors interspersed with non-colored messages with color overriding disabled: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "message 1[green]message 2[default]message 3[red]message 4[default]",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 01 write 06 writes a messages with colors interspersed with non-colored messages with color overriding disabled: output as chunks 1`] = `
Array [
  "[    log] message 1[green]message 2[default]message 3[red]message 4[default]",
]
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 02 writeLine 01 writes a single message: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "test message[n]",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 02 writeLine 01 writes a single message: output as chunks 1`] = `
Array [
  "[    log] test message",
]
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 02 writeLine 02 writes multiple messages: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "message 1message 2[n]",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 02 writeLine 02 writes multiple messages: output as chunks 1`] = `
Array [
  "[    log] message 1message 2",
]
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 02 writeLine 03 writes a message with colors: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "[green]message 1[default][n]",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 02 writeLine 03 writes a message with colors: output as chunks 1`] = `
Array [
  "[    log] [green]message 1[default]",
]
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 02 writeLine 04 writes a multiple messages with colors: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "[green]message 1[default][red]message 2[default][n]",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 02 writeLine 04 writes a multiple messages with colors: output as chunks 1`] = `
Array [
  "[    log] [green]message 1[default][red]message 2[default]",
]
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 02 writeLine 05 writes a messages with colors interspersed with non-colored messages: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "message 1[green]message 2[default]message 3[red]message 4[default][n]",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 02 writeLine 05 writes a messages with colors interspersed with non-colored messages: output as chunks 1`] = `
Array [
  "[    log] message 1[green]message 2[default]message 3[red]message 4[default]",
]
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 02 writeLine 06 writes a messages with colors interspersed with non-colored messages with color overriding disabled: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "message 1[green]message 2[default]message 3[red]message 4[default][n]",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 02 writeLine 06 writes a messages with colors interspersed with non-colored messages with color overriding disabled: output as chunks 1`] = `
Array [
  "[    log] message 1[green]message 2[default]message 3[red]message 4[default]",
]
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 03 writeWarning 01 writes a single message: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "",
  "warning": "[yellow]test message[default]",
}
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 03 writeWarning 01 writes a single message: output as chunks 1`] = `
Array [
  "[warning] [yellow]test message[default]",
]
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 03 writeWarning 02 writes multiple messages: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "",
  "warning": "[yellow]message 1[default][yellow]message 2[default]",
}
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 03 writeWarning 02 writes multiple messages: output as chunks 1`] = `
Array [
  "[warning] [yellow]message 1[default][yellow]message 2[default]",
]
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 03 writeWarning 03 writes a message with colors: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "",
  "warning": "[yellow]message 1[default]",
}
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 03 writeWarning 03 writes a message with colors: output as chunks 1`] = `
Array [
  "[warning] [yellow]message 1[default]",
]
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 03 writeWarning 04 writes a multiple messages with colors: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "",
  "warning": "[yellow]message 1[default][yellow]message 2[default]",
}
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 03 writeWarning 04 writes a multiple messages with colors: output as chunks 1`] = `
Array [
  "[warning] [yellow]message 1[default][yellow]message 2[default]",
]
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 03 writeWarning 05 writes a messages with colors interspersed with non-colored messages: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "",
  "warning": "[yellow]message 1[default][yellow]message 2[default][yellow]message 3[default][yellow]message 4[default]",
}
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 03 writeWarning 05 writes a messages with colors interspersed with non-colored messages: output as chunks 1`] = `
Array [
  "[warning] [yellow]message 1[default][yellow]message 2[default][yellow]message 3[default][yellow]message 4[default]",
]
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 03 writeWarning 06 writes a messages with colors interspersed with non-colored messages with color overriding disabled: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "",
  "warning": "message 1[green]message 2[default]message 3[red]message 4[default]",
}
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 03 writeWarning 06 writes a messages with colors interspersed with non-colored messages with color overriding disabled: output as chunks 1`] = `
Array [
  "[warning] message 1[green]message 2[default]message 3[red]message 4[default]",
]
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 04 writeWarningLine 01 writes a single message: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "",
  "warning": "[yellow]test message[default][n]",
}
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 04 writeWarningLine 01 writes a single message: output as chunks 1`] = `
Array [
  "[warning] [yellow]test message[default]",
]
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 04 writeWarningLine 02 writes multiple messages: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "",
  "warning": "[yellow]message 1[default][yellow]message 2[default][n]",
}
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 04 writeWarningLine 02 writes multiple messages: output as chunks 1`] = `
Array [
  "[warning] [yellow]message 1[default][yellow]message 2[default]",
]
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 04 writeWarningLine 03 writes a message with colors: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "",
  "warning": "[yellow]message 1[default][n]",
}
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 04 writeWarningLine 03 writes a message with colors: output as chunks 1`] = `
Array [
  "[warning] [yellow]message 1[default]",
]
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 04 writeWarningLine 04 writes a multiple messages with colors: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "",
  "warning": "[yellow]message 1[default][yellow]message 2[default][n]",
}
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 04 writeWarningLine 04 writes a multiple messages with colors: output as chunks 1`] = `
Array [
  "[warning] [yellow]message 1[default][yellow]message 2[default]",
]
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 04 writeWarningLine 05 writes a messages with colors interspersed with non-colored messages: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "",
  "warning": "[yellow]message 1[default][yellow]message 2[default][yellow]message 3[default][yellow]message 4[default][n]",
}
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 04 writeWarningLine 05 writes a messages with colors interspersed with non-colored messages: output as chunks 1`] = `
Array [
  "[warning] [yellow]message 1[default][yellow]message 2[default][yellow]message 3[default][yellow]message 4[default]",
]
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 04 writeWarningLine 06 writes a messages with colors interspersed with non-colored messages with color overriding disabled: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "",
  "warning": "message 1[green]message 2[default]message 3[red]message 4[default][n]",
}
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 04 writeWarningLine 06 writes a messages with colors interspersed with non-colored messages with color overriding disabled: output as chunks 1`] = `
Array [
  "[warning] message 1[green]message 2[default]message 3[red]message 4[default]",
]
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 05 writeError 01 writes a single message: output 1`] = `
Object {
  "debug": "",
  "error": "[red]test message[default]",
  "log": "",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 05 writeError 01 writes a single message: output as chunks 1`] = `
Array [
  "[  error] [red]test message[default]",
]
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 05 writeError 02 writes multiple messages: output 1`] = `
Object {
  "debug": "",
  "error": "[red]message 1[default][red]message 2[default]",
  "log": "",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 05 writeError 02 writes multiple messages: output as chunks 1`] = `
Array [
  "[  error] [red]message 1[default][red]message 2[default]",
]
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 05 writeError 03 writes a message with colors: output 1`] = `
Object {
  "debug": "",
  "error": "[red]message 1[default]",
  "log": "",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 05 writeError 03 writes a message with colors: output as chunks 1`] = `
Array [
  "[  error] [red]message 1[default]",
]
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 05 writeError 04 writes a multiple messages with colors: output 1`] = `
Object {
  "debug": "",
  "error": "[red]message 1[default][red]message 2[default]",
  "log": "",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 05 writeError 04 writes a multiple messages with colors: output as chunks 1`] = `
Array [
  "[  error] [red]message 1[default][red]message 2[default]",
]
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 05 writeError 05 writes a messages with colors interspersed with non-colored messages: output 1`] = `
Object {
  "debug": "",
  "error": "[red]message 1[default][red]message 2[default][red]message 3[default][red]message 4[default]",
  "log": "",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 05 writeError 05 writes a messages with colors interspersed with non-colored messages: output as chunks 1`] = `
Array [
  "[  error] [red]message 1[default][red]message 2[default][red]message 3[default][red]message 4[default]",
]
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 05 writeError 06 writes a messages with colors interspersed with non-colored messages with color overriding disabled: output 1`] = `
Object {
  "debug": "",
  "error": "message 1[green]message 2[default]message 3[red]message 4[default]",
  "log": "",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 05 writeError 06 writes a messages with colors interspersed with non-colored messages with color overriding disabled: output as chunks 1`] = `
Array [
  "[  error] message 1[green]message 2[default]message 3[red]message 4[default]",
]
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 06 writeErrorLine 01 writes a single message: output 1`] = `
Object {
  "debug": "",
  "error": "[red]test message[default][n]",
  "log": "",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 06 writeErrorLine 01 writes a single message: output as chunks 1`] = `
Array [
  "[  error] [red]test message[default]",
]
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 06 writeErrorLine 02 writes multiple messages: output 1`] = `
Object {
  "debug": "",
  "error": "[red]message 1[default][red]message 2[default][n]",
  "log": "",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 06 writeErrorLine 02 writes multiple messages: output as chunks 1`] = `
Array [
  "[  error] [red]message 1[default][red]message 2[default]",
]
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 06 writeErrorLine 03 writes a message with colors: output 1`] = `
Object {
  "debug": "",
  "error": "[red]message 1[default][n]",
  "log": "",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 06 writeErrorLine 03 writes a message with colors: output as chunks 1`] = `
Array [
  "[  error] [red]message 1[default]",
]
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 06 writeErrorLine 04 writes a multiple messages with colors: output 1`] = `
Object {
  "debug": "",
  "error": "[red]message 1[default][red]message 2[default][n]",
  "log": "",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 06 writeErrorLine 04 writes a multiple messages with colors: output as chunks 1`] = `
Array [
  "[  error] [red]message 1[default][red]message 2[default]",
]
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 06 writeErrorLine 05 writes a messages with colors interspersed with non-colored messages: output 1`] = `
Object {
  "debug": "",
  "error": "[red]message 1[default][red]message 2[default][red]message 3[default][red]message 4[default][n]",
  "log": "",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 06 writeErrorLine 05 writes a messages with colors interspersed with non-colored messages: output as chunks 1`] = `
Array [
  "[  error] [red]message 1[default][red]message 2[default][red]message 3[default][red]message 4[default]",
]
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 06 writeErrorLine 06 writes a messages with colors interspersed with non-colored messages with color overriding disabled: output 1`] = `
Object {
  "debug": "",
  "error": "message 1[green]message 2[default]message 3[red]message 4[default][n]",
  "log": "",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 06 writeErrorLine 06 writes a messages with colors interspersed with non-colored messages with color overriding disabled: output as chunks 1`] = `
Array [
  "[  error] message 1[green]message 2[default]message 3[red]message 4[default]",
]
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 07 writeVerbose 01 writes a single message: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "test message",
  "warning": "",
}
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 07 writeVerbose 01 writes a single message: output as chunks 1`] = `
Array [
  "[verbose] test message",
]
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 07 writeVerbose 02 writes multiple messages: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "message 1message 2",
  "warning": "",
}
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 07 writeVerbose 02 writes multiple messages: output as chunks 1`] = `
Array [
  "[verbose] message 1message 2",
]
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 07 writeVerbose 03 writes a message with colors: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "[green]message 1[default]",
  "warning": "",
}
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 07 writeVerbose 03 writes a message with colors: output as chunks 1`] = `
Array [
  "[verbose] [green]message 1[default]",
]
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 07 writeVerbose 04 writes a multiple messages with colors: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "[green]message 1[default][red]message 2[default]",
  "warning": "",
}
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 07 writeVerbose 04 writes a multiple messages with colors: output as chunks 1`] = `
Array [
  "[verbose] [green]message 1[default][red]message 2[default]",
]
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 07 writeVerbose 05 writes a messages with colors interspersed with non-colored messages: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "message 1[green]message 2[default]message 3[red]message 4[default]",
  "warning": "",
}
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 07 writeVerbose 05 writes a messages with colors interspersed with non-colored messages: output as chunks 1`] = `
Array [
  "[verbose] message 1[green]message 2[default]message 3[red]message 4[default]",
]
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 07 writeVerbose 06 writes a messages with colors interspersed with non-colored messages with color overriding disabled: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "message 1[green]message 2[default]message 3[red]message 4[default]",
  "warning": "",
}
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 07 writeVerbose 06 writes a messages with colors interspersed with non-colored messages with color overriding disabled: output as chunks 1`] = `
Array [
  "[verbose] message 1[green]message 2[default]message 3[red]message 4[default]",
]
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 08 writeVerboseLine 01 writes a single message: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "test message[n]",
  "warning": "",
}
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 08 writeVerboseLine 01 writes a single message: output as chunks 1`] = `
Array [
  "[verbose] test message",
]
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 08 writeVerboseLine 02 writes multiple messages: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "message 1message 2[n]",
  "warning": "",
}
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 08 writeVerboseLine 02 writes multiple messages: output as chunks 1`] = `
Array [
  "[verbose] message 1message 2",
]
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 08 writeVerboseLine 03 writes a message with colors: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "[green]message 1[default][n]",
  "warning": "",
}
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 08 writeVerboseLine 03 writes a message with colors: output as chunks 1`] = `
Array [
  "[verbose] [green]message 1[default]",
]
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 08 writeVerboseLine 04 writes a multiple messages with colors: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "[green]message 1[default][red]message 2[default][n]",
  "warning": "",
}
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 08 writeVerboseLine 04 writes a multiple messages with colors: output as chunks 1`] = `
Array [
  "[verbose] [green]message 1[default][red]message 2[default]",
]
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 08 writeVerboseLine 05 writes a messages with colors interspersed with non-colored messages: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "message 1[green]message 2[default]message 3[red]message 4[default][n]",
  "warning": "",
}
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 08 writeVerboseLine 05 writes a messages with colors interspersed with non-colored messages: output as chunks 1`] = `
Array [
  "[verbose] message 1[green]message 2[default]message 3[red]message 4[default]",
]
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 08 writeVerboseLine 06 writes a messages with colors interspersed with non-colored messages with color overriding disabled: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "message 1[green]message 2[default]message 3[red]message 4[default][n]",
  "warning": "",
}
`;

exports[`Terminal 01 color enabled 01 basic terminal functions 08 writeVerboseLine 06 writes a messages with colors interspersed with non-colored messages with color overriding disabled: output as chunks 1`] = `
Array [
  "[verbose] message 1[green]message 2[default]message 3[red]message 4[default]",
]
`;

exports[`Terminal 01 color enabled 05 writes to multiple streams: output 1`] = `
Object {
  "debug": "",
  "error": "[red]message 1[default][red]message 2[default][red]message 3[default][red]message 4[default][red]test message[default][n][red]message 1[default][red]message 2[default][red]message 1[default][red]message 2[default][n][red]message 1[default][red]message 1[default][red]message 2[default][red]message 3[default][red]message 4[default][n][red]message 1[default][n][red]test message[default][red]message 1[default][red]message 2[default][n][red]message 1[default][red]message 2[default]",
  "log": "message 1[green]message 2[default]message 3[red]message 4[default][green]message 1[default][n][green]message 1[default][green]message 1[default][red]message 2[default][green]message 1[default][red]message 2[default][n]test messagemessage 1[green]message 2[default]message 3[red]message 4[default][n]message 1message 2test message[n]message 1message 2[n]",
  "verbose": "test message[green]message 1[default]message 1[green]message 2[default]message 3[red]message 4[default][n]test message[n]message 1[green]message 2[default]message 3[red]message 4[default]message 1message 2[green]message 1[default][n][green]message 1[default][red]message 2[default][n]message 1message 2[n][green]message 1[default][red]message 2[default]",
  "warning": "[yellow]message 1[default][yellow]message 2[default][n][yellow]message 1[default][yellow]message 2[default][yellow]message 1[default][yellow]message 2[default][yellow]message 3[default][yellow]message 4[default][yellow]message 1[default][yellow]message 2[default][yellow]message 3[default][yellow]message 4[default][n][yellow]test message[default][n][yellow]message 1[default][yellow]message 2[default][yellow]message 1[default][yellow]message 1[default][yellow]message 2[default][n][yellow]message 1[default][n]",
}
`;

exports[`Terminal 01 color enabled 05 writes to multiple streams: output as chunks 1`] = `
Array [
  "[    log] message 1[green]message 2[default]message 3[red]message 4[default]",
  "[warning] [yellow]message 1[default][yellow]message 2[default]",
  "[verbose] test message[green]message 1[default]",
  "[    log] [green]message 1[default]",
  "[  error] [red]message 1[default][red]message 2[default][red]message 3[default][red]message 4[default][red]test message[default]",
  "[verbose] message 1[green]message 2[default]message 3[red]message 4[default]",
  "[verbose] test message",
  "[warning] [yellow]message 1[default][yellow]message 2[default][yellow]message 1[default][yellow]message 2[default][yellow]message 3[default][yellow]message 4[default]",
  "[  error] [red]message 1[default][red]message 2[default]",
  "[    log] [green]message 1[default]",
  "[verbose] message 1[green]message 2[default]message 3[red]message 4[default]",
  "[  error] [red]message 1[default][red]message 2[default]",
  "[    log] [green]message 1[default][red]message 2[default]",
  "[verbose] message 1message 2[green]message 1[default]",
  "[    log] [green]message 1[default][red]message 2[default]",
  "[  error] [red]message 1[default]",
  "[warning] [yellow]message 1[default][yellow]message 2[default][yellow]message 3[default][yellow]message 4[default]",
  "[    log] test message",
  "[warning] [yellow]test message[default]",
  "[verbose] [green]message 1[default][red]message 2[default]",
  "[verbose] message 1message 2",
  "[  error] [red]message 1[default][red]message 2[default][red]message 3[default][red]message 4[default]",
  "[    log] message 1[green]message 2[default]message 3[red]message 4[default]",
  "[warning] [yellow]message 1[default][yellow]message 2[default]",
  "[  error] [red]message 1[default]",
  "[    log] message 1message 2",
  "[verbose] [green]message 1[default][red]message 2[default]",
  "[warning] [yellow]message 1[default]",
  "[    log] test message",
  "[  error] [red]test message[default]",
  "[    log] message 1message 2",
  "[  error] [red]message 1[default][red]message 2[default]",
  "[  error] [red]message 1[default][red]message 2[default]",
  "[warning] [yellow]message 1[default][yellow]message 2[default]",
  "[warning] [yellow]message 1[default]",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 01 write 01 writes a single message: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "test message",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 01 write 01 writes a single message: output as chunks 1`] = `
Array [
  "[    log] test message",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 01 write 02 writes multiple messages: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "message 1message 2",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 01 write 02 writes multiple messages: output as chunks 1`] = `
Array [
  "[    log] message 1message 2",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 01 write 03 writes a message with colors: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "message 1",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 01 write 03 writes a message with colors: output as chunks 1`] = `
Array [
  "[    log] message 1",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 01 write 04 writes a multiple messages with colors: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "message 1message 2",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 01 write 04 writes a multiple messages with colors: output as chunks 1`] = `
Array [
  "[    log] message 1message 2",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 01 write 05 writes a messages with colors interspersed with non-colored messages: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "message 1message 2message 3message 4",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 01 write 05 writes a messages with colors interspersed with non-colored messages: output as chunks 1`] = `
Array [
  "[    log] message 1message 2message 3message 4",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 01 write 06 writes a messages with colors interspersed with non-colored messages with color overriding disabled: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "message 1message 2message 3message 4",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 01 write 06 writes a messages with colors interspersed with non-colored messages with color overriding disabled: output as chunks 1`] = `
Array [
  "[    log] message 1message 2message 3message 4",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 02 writeLine 01 writes a single message: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "test message[n]",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 02 writeLine 01 writes a single message: output as chunks 1`] = `
Array [
  "[    log] test message",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 02 writeLine 02 writes multiple messages: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "message 1message 2[n]",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 02 writeLine 02 writes multiple messages: output as chunks 1`] = `
Array [
  "[    log] message 1message 2",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 02 writeLine 03 writes a message with colors: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "message 1[n]",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 02 writeLine 03 writes a message with colors: output as chunks 1`] = `
Array [
  "[    log] message 1",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 02 writeLine 04 writes a multiple messages with colors: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "message 1message 2[n]",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 02 writeLine 04 writes a multiple messages with colors: output as chunks 1`] = `
Array [
  "[    log] message 1message 2",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 02 writeLine 05 writes a messages with colors interspersed with non-colored messages: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "message 1message 2message 3message 4[n]",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 02 writeLine 05 writes a messages with colors interspersed with non-colored messages: output as chunks 1`] = `
Array [
  "[    log] message 1message 2message 3message 4",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 02 writeLine 06 writes a messages with colors interspersed with non-colored messages with color overriding disabled: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "message 1message 2message 3message 4[n]",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 02 writeLine 06 writes a messages with colors interspersed with non-colored messages with color overriding disabled: output as chunks 1`] = `
Array [
  "[    log] message 1message 2message 3message 4",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 03 writeWarning 01 writes a single message: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "",
  "warning": "test message",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 03 writeWarning 01 writes a single message: output as chunks 1`] = `
Array [
  "[warning] test message",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 03 writeWarning 02 writes multiple messages: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "",
  "warning": "message 1message 2",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 03 writeWarning 02 writes multiple messages: output as chunks 1`] = `
Array [
  "[warning] message 1message 2",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 03 writeWarning 03 writes a message with colors: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "",
  "warning": "message 1",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 03 writeWarning 03 writes a message with colors: output as chunks 1`] = `
Array [
  "[warning] message 1",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 03 writeWarning 04 writes a multiple messages with colors: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "",
  "warning": "message 1message 2",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 03 writeWarning 04 writes a multiple messages with colors: output as chunks 1`] = `
Array [
  "[warning] message 1message 2",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 03 writeWarning 05 writes a messages with colors interspersed with non-colored messages: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "",
  "warning": "message 1message 2message 3message 4",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 03 writeWarning 05 writes a messages with colors interspersed with non-colored messages: output as chunks 1`] = `
Array [
  "[warning] message 1message 2message 3message 4",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 03 writeWarning 06 writes a messages with colors interspersed with non-colored messages with color overriding disabled: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "",
  "warning": "message 1message 2message 3message 4",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 03 writeWarning 06 writes a messages with colors interspersed with non-colored messages with color overriding disabled: output as chunks 1`] = `
Array [
  "[warning] message 1message 2message 3message 4",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 04 writeWarningLine 01 writes a single message: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "",
  "warning": "test message[n]",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 04 writeWarningLine 01 writes a single message: output as chunks 1`] = `
Array [
  "[warning] test message",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 04 writeWarningLine 02 writes multiple messages: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "",
  "warning": "message 1message 2[n]",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 04 writeWarningLine 02 writes multiple messages: output as chunks 1`] = `
Array [
  "[warning] message 1message 2",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 04 writeWarningLine 03 writes a message with colors: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "",
  "warning": "message 1[n]",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 04 writeWarningLine 03 writes a message with colors: output as chunks 1`] = `
Array [
  "[warning] message 1",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 04 writeWarningLine 04 writes a multiple messages with colors: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "",
  "warning": "message 1message 2[n]",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 04 writeWarningLine 04 writes a multiple messages with colors: output as chunks 1`] = `
Array [
  "[warning] message 1message 2",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 04 writeWarningLine 05 writes a messages with colors interspersed with non-colored messages: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "",
  "warning": "message 1message 2message 3message 4[n]",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 04 writeWarningLine 05 writes a messages with colors interspersed with non-colored messages: output as chunks 1`] = `
Array [
  "[warning] message 1message 2message 3message 4",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 04 writeWarningLine 06 writes a messages with colors interspersed with non-colored messages with color overriding disabled: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "",
  "warning": "message 1message 2message 3message 4[n]",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 04 writeWarningLine 06 writes a messages with colors interspersed with non-colored messages with color overriding disabled: output as chunks 1`] = `
Array [
  "[warning] message 1message 2message 3message 4",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 05 writeError 01 writes a single message: output 1`] = `
Object {
  "debug": "",
  "error": "test message",
  "log": "",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 05 writeError 01 writes a single message: output as chunks 1`] = `
Array [
  "[  error] test message",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 05 writeError 02 writes multiple messages: output 1`] = `
Object {
  "debug": "",
  "error": "message 1message 2",
  "log": "",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 05 writeError 02 writes multiple messages: output as chunks 1`] = `
Array [
  "[  error] message 1message 2",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 05 writeError 03 writes a message with colors: output 1`] = `
Object {
  "debug": "",
  "error": "message 1",
  "log": "",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 05 writeError 03 writes a message with colors: output as chunks 1`] = `
Array [
  "[  error] message 1",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 05 writeError 04 writes a multiple messages with colors: output 1`] = `
Object {
  "debug": "",
  "error": "message 1message 2",
  "log": "",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 05 writeError 04 writes a multiple messages with colors: output as chunks 1`] = `
Array [
  "[  error] message 1message 2",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 05 writeError 05 writes a messages with colors interspersed with non-colored messages: output 1`] = `
Object {
  "debug": "",
  "error": "message 1message 2message 3message 4",
  "log": "",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 05 writeError 05 writes a messages with colors interspersed with non-colored messages: output as chunks 1`] = `
Array [
  "[  error] message 1message 2message 3message 4",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 05 writeError 06 writes a messages with colors interspersed with non-colored messages with color overriding disabled: output 1`] = `
Object {
  "debug": "",
  "error": "message 1message 2message 3message 4",
  "log": "",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 05 writeError 06 writes a messages with colors interspersed with non-colored messages with color overriding disabled: output as chunks 1`] = `
Array [
  "[  error] message 1message 2message 3message 4",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 06 writeErrorLine 01 writes a single message: output 1`] = `
Object {
  "debug": "",
  "error": "test message[n]",
  "log": "",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 06 writeErrorLine 01 writes a single message: output as chunks 1`] = `
Array [
  "[  error] test message",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 06 writeErrorLine 02 writes multiple messages: output 1`] = `
Object {
  "debug": "",
  "error": "message 1message 2[n]",
  "log": "",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 06 writeErrorLine 02 writes multiple messages: output as chunks 1`] = `
Array [
  "[  error] message 1message 2",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 06 writeErrorLine 03 writes a message with colors: output 1`] = `
Object {
  "debug": "",
  "error": "message 1[n]",
  "log": "",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 06 writeErrorLine 03 writes a message with colors: output as chunks 1`] = `
Array [
  "[  error] message 1",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 06 writeErrorLine 04 writes a multiple messages with colors: output 1`] = `
Object {
  "debug": "",
  "error": "message 1message 2[n]",
  "log": "",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 06 writeErrorLine 04 writes a multiple messages with colors: output as chunks 1`] = `
Array [
  "[  error] message 1message 2",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 06 writeErrorLine 05 writes a messages with colors interspersed with non-colored messages: output 1`] = `
Object {
  "debug": "",
  "error": "message 1message 2message 3message 4[n]",
  "log": "",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 06 writeErrorLine 05 writes a messages with colors interspersed with non-colored messages: output as chunks 1`] = `
Array [
  "[  error] message 1message 2message 3message 4",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 06 writeErrorLine 06 writes a messages with colors interspersed with non-colored messages with color overriding disabled: output 1`] = `
Object {
  "debug": "",
  "error": "message 1message 2message 3message 4[n]",
  "log": "",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 06 writeErrorLine 06 writes a messages with colors interspersed with non-colored messages with color overriding disabled: output as chunks 1`] = `
Array [
  "[  error] message 1message 2message 3message 4",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 07 writeVerbose 01 writes a single message: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "test message",
  "warning": "",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 07 writeVerbose 01 writes a single message: output as chunks 1`] = `
Array [
  "[verbose] test message",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 07 writeVerbose 02 writes multiple messages: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "message 1message 2",
  "warning": "",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 07 writeVerbose 02 writes multiple messages: output as chunks 1`] = `
Array [
  "[verbose] message 1message 2",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 07 writeVerbose 03 writes a message with colors: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "message 1",
  "warning": "",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 07 writeVerbose 03 writes a message with colors: output as chunks 1`] = `
Array [
  "[verbose] message 1",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 07 writeVerbose 04 writes a multiple messages with colors: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "message 1message 2",
  "warning": "",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 07 writeVerbose 04 writes a multiple messages with colors: output as chunks 1`] = `
Array [
  "[verbose] message 1message 2",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 07 writeVerbose 05 writes a messages with colors interspersed with non-colored messages: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "message 1message 2message 3message 4",
  "warning": "",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 07 writeVerbose 05 writes a messages with colors interspersed with non-colored messages: output as chunks 1`] = `
Array [
  "[verbose] message 1message 2message 3message 4",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 07 writeVerbose 06 writes a messages with colors interspersed with non-colored messages with color overriding disabled: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "message 1message 2message 3message 4",
  "warning": "",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 07 writeVerbose 06 writes a messages with colors interspersed with non-colored messages with color overriding disabled: output as chunks 1`] = `
Array [
  "[verbose] message 1message 2message 3message 4",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 08 writeVerboseLine 01 writes a single message: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "test message[n]",
  "warning": "",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 08 writeVerboseLine 01 writes a single message: output as chunks 1`] = `
Array [
  "[verbose] test message",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 08 writeVerboseLine 02 writes multiple messages: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "message 1message 2[n]",
  "warning": "",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 08 writeVerboseLine 02 writes multiple messages: output as chunks 1`] = `
Array [
  "[verbose] message 1message 2",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 08 writeVerboseLine 03 writes a message with colors: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "message 1[n]",
  "warning": "",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 08 writeVerboseLine 03 writes a message with colors: output as chunks 1`] = `
Array [
  "[verbose] message 1",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 08 writeVerboseLine 04 writes a multiple messages with colors: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "message 1message 2[n]",
  "warning": "",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 08 writeVerboseLine 04 writes a multiple messages with colors: output as chunks 1`] = `
Array [
  "[verbose] message 1message 2",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 08 writeVerboseLine 05 writes a messages with colors interspersed with non-colored messages: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "message 1message 2message 3message 4[n]",
  "warning": "",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 08 writeVerboseLine 05 writes a messages with colors interspersed with non-colored messages: output as chunks 1`] = `
Array [
  "[verbose] message 1message 2message 3message 4",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 08 writeVerboseLine 06 writes a messages with colors interspersed with non-colored messages with color overriding disabled: output 1`] = `
Object {
  "debug": "",
  "error": "",
  "log": "",
  "verbose": "message 1message 2message 3message 4[n]",
  "warning": "",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 08 writeVerboseLine 06 writes a messages with colors interspersed with non-colored messages with color overriding disabled: output as chunks 1`] = `
Array [
  "[verbose] message 1message 2message 3message 4",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 09 writeDebug 01 writes a single message: output 1`] = `
Object {
  "debug": "test message",
  "error": "",
  "log": "",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 09 writeDebug 01 writes a single message: output as chunks 1`] = `
Array [
  "[  debug] test message",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 09 writeDebug 02 writes multiple messages: output 1`] = `
Object {
  "debug": "message 1message 2",
  "error": "",
  "log": "",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 09 writeDebug 02 writes multiple messages: output as chunks 1`] = `
Array [
  "[  debug] message 1message 2",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 09 writeDebug 03 writes a message with colors: output 1`] = `
Object {
  "debug": "message 1",
  "error": "",
  "log": "",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 09 writeDebug 03 writes a message with colors: output as chunks 1`] = `
Array [
  "[  debug] message 1",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 09 writeDebug 04 writes a multiple messages with colors: output 1`] = `
Object {
  "debug": "message 1message 2",
  "error": "",
  "log": "",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 09 writeDebug 04 writes a multiple messages with colors: output as chunks 1`] = `
Array [
  "[  debug] message 1message 2",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 09 writeDebug 05 writes a messages with colors interspersed with non-colored messages: output 1`] = `
Object {
  "debug": "message 1message 2message 3message 4",
  "error": "",
  "log": "",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 09 writeDebug 05 writes a messages with colors interspersed with non-colored messages: output as chunks 1`] = `
Array [
  "[  debug] message 1message 2message 3message 4",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 09 writeDebug 06 writes a messages with colors interspersed with non-colored messages with color overriding disabled: output 1`] = `
Object {
  "debug": "message 1message 2message 3message 4",
  "error": "",
  "log": "",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 09 writeDebug 06 writes a messages with colors interspersed with non-colored messages with color overriding disabled: output as chunks 1`] = `
Array [
  "[  debug] message 1message 2message 3message 4",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 10 writeDebugLine 01 writes a single message: output 1`] = `
Object {
  "debug": "test message[n]",
  "error": "",
  "log": "",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 10 writeDebugLine 01 writes a single message: output as chunks 1`] = `
Array [
  "[  debug] test message",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 10 writeDebugLine 02 writes multiple messages: output 1`] = `
Object {
  "debug": "message 1message 2[n]",
  "error": "",
  "log": "",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 10 writeDebugLine 02 writes multiple messages: output as chunks 1`] = `
Array [
  "[  debug] message 1message 2",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 10 writeDebugLine 03 writes a message with colors: output 1`] = `
Object {
  "debug": "message 1[n]",
  "error": "",
  "log": "",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 10 writeDebugLine 03 writes a message with colors: output as chunks 1`] = `
Array [
  "[  debug] message 1",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 10 writeDebugLine 04 writes a multiple messages with colors: output 1`] = `
Object {
  "debug": "message 1message 2[n]",
  "error": "",
  "log": "",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 10 writeDebugLine 04 writes a multiple messages with colors: output as chunks 1`] = `
Array [
  "[  debug] message 1message 2",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 10 writeDebugLine 05 writes a messages with colors interspersed with non-colored messages: output 1`] = `
Object {
  "debug": "message 1message 2message 3message 4[n]",
  "error": "",
  "log": "",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 10 writeDebugLine 05 writes a messages with colors interspersed with non-colored messages: output as chunks 1`] = `
Array [
  "[  debug] message 1message 2message 3message 4",
]
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 10 writeDebugLine 06 writes a messages with colors interspersed with non-colored messages with color overriding disabled: output 1`] = `
Object {
  "debug": "message 1message 2message 3message 4[n]",
  "error": "",
  "log": "",
  "verbose": "",
  "warning": "",
}
`;

exports[`Terminal 02 color disabled 01 basic terminal functions 10 writeDebugLine 06 writes a messages with colors interspersed with non-colored messages with color overriding disabled: output as chunks 1`] = `
Array [
  "[  debug] message 1message 2message 3message 4",
]
`;

exports[`Terminal 02 color disabled 05 writes to multiple streams: output 1`] = `
Object {
  "debug": "",
  "error": "message 1message 2message 3message 4test message[n]message 1message 2message 1message 2[n]message 1message 1message 2message 3message 4[n]message 1[n]test messagemessage 1message 2[n]message 1message 2",
  "log": "message 1message 2message 3message 4message 1[n]message 1message 1message 2message 1message 2[n]test messagemessage 1message 2message 3message 4[n]message 1message 2test message[n]message 1message 2[n]",
  "verbose": "test messagemessage 1message 1message 2message 3message 4[n]test message[n]message 1message 2message 3message 4message 1message 2message 1[n]message 1message 2[n]message 1message 2[n]message 1message 2",
  "warning": "message 1message 2[n]message 1message 2message 1message 2message 3message 4message 1message 2message 3message 4[n]test message[n]message 1message 2message 1message 1message 2[n]message 1[n]",
}
`;

exports[`Terminal 02 color disabled 05 writes to multiple streams: output as chunks 1`] = `
Array [
  "[    log] message 1message 2message 3message 4",
  "[warning] message 1message 2",
  "[verbose] test messagemessage 1",
  "[    log] message 1",
  "[  error] message 1message 2message 3message 4test message",
  "[verbose] message 1message 2message 3message 4",
  "[verbose] test message",
  "[warning] message 1message 2message 1message 2message 3message 4",
  "[  error] message 1message 2",
  "[    log] message 1",
  "[verbose] message 1message 2message 3message 4",
  "[  error] message 1message 2",
  "[    log] message 1message 2",
  "[verbose] message 1message 2message 1",
  "[    log] message 1message 2",
  "[  error] message 1",
  "[warning] message 1message 2message 3message 4",
  "[    log] test message",
  "[warning] test message",
  "[verbose] message 1message 2",
  "[verbose] message 1message 2",
  "[  error] message 1message 2message 3message 4",
  "[    log] message 1message 2message 3message 4",
  "[warning] message 1message 2",
  "[  error] message 1",
  "[    log] message 1message 2",
  "[verbose] message 1message 2",
  "[warning] message 1",
  "[    log] test message",
  "[  error] test message",
  "[    log] message 1message 2",
  "[  error] message 1message 2",
  "[  error] message 1message 2",
  "[warning] message 1message 2",
  "[warning] message 1",
]
`;
